--- a/ls.html
+++ b/ls.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="../css/chapter-8/ls.css">
+<link rel="stylesheet" href="../css/ls.css">
 <body class="brooo">
     <header class="epikef">
         <h1>L's Styling</h1>
