--- a/ls.html
+++ b/ls.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="../ls.css">
+<link rel="stylesheet" href="./ls.css">
 <body class="brooo">
     <header class="epikef">
         <h1>L's Styling</h1>
@@ -61,14 +61,14 @@
         <li>Ιατρικά Υλικά σε περίπτωση που δεν παει καλα η φαση! </li>
         <p>Αν θέλετε πλούσιο φυσικό και ανέμελο μαλλί σαν το δικό μου...</p>
         <h1 class="le">LS STYLING</h1>
-         <img class="img1" src="../images/broo.jpg" alt="">
+         <img class="img1" src="./images/broo.jpg" alt="">
         <h3>About Us</h3>
         <p>O Γεώργιος Λιακόπουλος aKa BroLiako είναι μια δημιουργική και αυτοδίδακτη προσωπικότητα με πολυετή εμπειρία στον χώρο το Hair Styling - Barbering.
            Εγεννήθην σε ενα φτωχικό προαστιο της Αθήνας την δεκαετία του 90.
            Απο μικρός ηταν ενα ανύσηχο πνεύμα με όραμα να καταφερει μια στιγμη να ξεφυγει απο μια σαπια και κακεντρεχή καπιταλιστική κοινωνία οπου θελει τους μικροαστους σκλαβωμενους και καταπιεσμενους απο τα μεγάλα αφεντικά.
            Ώντας το μικρό ψαρι κατάφερε με πολυ πονο και ασκηση να ξεφυγει απο τους καρχαριες και δεν πιαστηκε ποτε του στα δολώματα αυτων!!!!!!!!
          </p>
-         <img class="img2" src="../images/leks.jpg" alt="">
+         <img class="img2" src="./images/leks.jpg" alt="">
          
          <h3>Achievements - Studies</h3>
          <ul>
