--- a/ls.html
+++ b/ls.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="./ls.css">
-<body class="brooo">
+<body>
     <header class="epikef">
         <h1>L's Styling</h1>
     </header>
