--- a/ls.html
+++ b/ls.html
@@ -12,12 +12,15 @@
     <ul class="left-link">
       <li><a href="#">GL BARBER</a></li>
     </ul>
-    <ul class="right-links">
+    <ul class="center-links">
       <li><a href="#">ΑΡΧΙΚΗ</a></li>
       <li><a href="#">ΓΕΡΑΚΑΣ</a></li>
       <li><a href="#">ΚΡΑΤΗΣΗ</a></li>
-      <li><a href="#">ΕΠΙΚΟΙΝΩΝΙΑ</a></li>
     </ul>
+    <ul class="right-link">
+      <li><img class="img1" src="./imgs/telephone.png" alt="telephone">  <a href="#">ΕΠΙΚΟΙΝΩΝΙΑ: 21066666677</a></li>
+    </ul>
+    
     
   </div>
   <img src="./imgs/glbarber.jpg" alt="GLBARBER">
