--- a/ls.html
+++ b/ls.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="selidoula1.css">
+  <link rel="stylesheet" href="./selidoula1.css">
   <title>Website Awesome</title>
 </head>
 <body>
@@ -20,10 +20,8 @@
     <ul class="right-link">
       <li><img class="img1" src="./imgs/telephone.png" alt="telephone">  <a href="#">ΕΠΙΚΟΙΝΩΝΙΑ: 21066666677</a></li>
     </ul>
-    
-    
   </div>
-  <img src="./imgs/glbarber.jpg" alt="GLBARBER">
+ 
     <div class="secondofall">
     <div class="subheader">
       <h1>Το καλύτερο σβήσιμο <br> της αγοράς</h1>
@@ -62,7 +60,7 @@
     <div class="text2">Skilled barbers aren’t cheap. Cheap barbers aren’t skilled.
   
   </div>
-<div class="quote">-Gewrgios, God of Barber.
+<div class="quote">-Gewrgios Liakopoulos, God of Barber.
 
 </div>
   </div>
